2003/11/01 01:33 (-0500) muppetman

	* t/GnomeIconList.t: put in a FIXME 
	* t/GnomeIconTheme.t: wasn't skipping enough tests
	* xs/GnomeIconEntry.xs: if NULL is possible on return, use _ornull.
	this hushes the cast warnings from t/GnomeIconEntry.t.

2003/10/31 20:09 (+0100) kaffeetisch

	* xs/GnomeIconTheme.xs: Use newRV_noinc instead of newRV_inc to
	avoid a memory leak.

2003/10/27 15:22 (+0100) ebassi

	* TODO: updated future bindings listing

2003/10/19 16:06 (+0200) kaffeetisch

	* Gnome2.pm: Correct a few mistakes.

2003/10/18 22:53 (+0200) kaffeetisch

	* t/GnomeIconList.t: Alter $list -> get_selection test to be more
	accurate.

	* t/GnomeIconTheme.t: Implement $theme -> list_icons test.

	* xs/GnomeIconList.xs
	* xs/GnomeIconTheme.xs
	* xs/GnomeProgram.xs: Don't use a temporary G(S)List in
	gnome_icon_list_get_selection, gnome_icon_theme_list_icons and
	gnome_program_locate_file.

	* xs/GnomeIconEntry.xs
	* xs/GnomeIconList.xs
	* xs/GnomeIconSelection.xs
	* xs/GnomePixmapEntry.xs: Use gchar_own instead of gchar for the
	return value of gnome_icon_entry_get_filename,
	gnome_icon_list_get_icon_filename, gnome_icon_selection_get_icon
	and gnome_pixmap_entry_get_filename.

2003/10/17 22:02 (+0200) kaffeetisch

	R t/GnomeVFSOps
	R t/GnomeVFSURI.t
	R xs/GnomeVFSInit.xs
	R xs/GnomeVFSOps.xs
	R xs/GnomeVFSURI.xs
	* MANIFEST
	* Makefile.PL
	* README
	* genmaps.pl
	* gnome2perl.h
	* gnome2perl.typemap
	* maps: Remove all references to GnomeVFS.  It's going to get its
	own package.

2003/10/12 21:49 (+0200) kaffeetisch

	* xs/Gnome2.xs: Remove calls to UNUSED.

2003/10/09 02:42 (+0200) kaffeetisch

	* genmaps.pl: Make warnings and strict safe.  Use descriptive
	variable names.  Remove every reference to GnomeCanvas.

2003/10/08 00:33 (+0200) kaffeetisch

	* Makefile.PL: Install gnome2perl-vfs-gtypes.h.

2003/10/07 23:57 (+0200) kaffeetisch

	* genmaps.pl: Include xs/gnome2perl-vfs-gtypes.c when compiling
	the helper program.
