@@ -32,7 +32,7 @@ SKIP: {
 
   SKIP: {
     skip("set_max_saved is new in 2.3.3", 1)
-      unless (join("", Gnome2 -> get_version_info()) >= 233);
+      unless (Gnome2 -> check_version(2, 3, 3));
 
     $entry -> set_max_saved(23);
     is($entry -> get_max_saved(), 23);
